fix searched tags

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12693,7 +12693,7 @@ section.home-search .home-search-mobile {
     color: white;
     background-color: #fe5b5f;
     font-size: 1.6em;
-    padding: 5px;
+    padding: 2px 10px;
     margin-right: 5px;
     margin-top: 5px;
     display: inline-block; }
