--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -737,7 +737,7 @@
                     color: white;
                     background-color: $hairfie;
                     font-size: 1.6em;
-                    padding: 5px;
+                    padding: 2px 10px;
                     margin-right: 5px;
                     margin-top: 5px;
                     display: inline-block;
